swagger init
